Fix home page alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-/* * {
+* {
   border: thin solid;
   border-color: red;
 }
- */
+
 body {
   font-family: 'Poppins', sans-serif;
 }
